# oaParkingMonitor

./: .env.example  .gitignore  INTEGRATION_GUIDE.md  LICENSE  README.md  WORKFLOW_DIAGRAM.md  pyproject.toml  requirements.txt  test_model.py  test_runner.py
cloud/: .gitignore  README.md  cdk.json  jest.config.js  package-lock.json  package.json
cloud/doc/: README.md
cloud/lib/: DashboardApiStack.js  DashboardApiStack.json  DeviceApiStack.js  DeviceApiStack.json  Graph.class.js  LayersStack.js  LayersStack.json  README.md  StackHelpers.js  StorageStack.js  StorageStack.json  SystemStack.js  SystemStack.json
cloud/lib/assets/dynamo/: clearTestDetections
cloud/lib/assets/lambdas/dashboard/dashboard_api_authorizer/: index.js
cloud/lib/assets/lambdas/dashboard/dashboard_get_detections/: index.html  index.js
cloud/lib/assets/lambdas/dashboard/dashboard_login/: index.js
cloud/lib/assets/lambdas/dashboard/dashboard_logout/: index.js
cloud/lib/assets/lambdas/dashboard/dashboard_ws_listener/: index.js
cloud/lib/assets/lambdas/device/device_api_authorizer/: index.js
cloud/lib/assets/lambdas/device/device_post_detections/: index.html  index.js  seq-diagram.msd
cloud/lib/assets/lambdas/device/device_ws_listener/: index.js
cloud/lib/assets/lambdas/system/system_detections_aggregator/: DetectionAggregator.class.js  index.js  package.json
cloud/lib/assets/lambdas/system/system_detections_aggregator/doc/: DetectionAggregator.class.html
cloud/lib/assets/lambdas/system/system_detections_aggregator/tests/: DetectionAggregator.class.test.js
cloud/lib/assets/layers/awsHelpers/: awsHelpers.js  package-lock.json  package.json  patch.js
cloud/lib/assets/s3/: sync_from_cloud
cloud/scripts/: README.md  backup  build-lambdas.js  gen_cypher.sh  package-lock.json  package.json  pnpm-lock.yaml  tableClear.js  tableCopyEnv.sh  tableGet.js  tableList.js  tableUpload.js  trackers.json
cloud/stubs/detections-api/: README.md  main.py  pyproject.toml  requirements.txt
config/: default.yaml  edge.yaml  mvp.yaml  preprod.yaml  presets.yaml  production.yaml  staging.yaml
config/environments/: .env.example  env.template
scripts/: README.md  activate_env.sh  aliases.sh  grant_permissions.sh  health_check.sh  helpers.sh  security_audit.sh  setup.sh  start.sh  validate.sh  verify_permissions.sh
src/: __init__.py  api_server.py  config.py  detector.py  display_manager.py  health_monitor.py  main.py
src/analysis/: __init__.py  data_converters.py  zone_adapter.py
src/api/: models.py
src/camera/: __init__.py  camera_manager.py  parameter_utils.py
src/config/: __init__.py  edge_manager.py  enums.py  manager.py  models.py  preset_loader.py  validation.py
src/core/: __init__.py  temporal.py  tracking.py
src/dashboard/: __init__.py  dashboard.py
src/dashboard/templates/: dashboard.html
src/data/: __init__.py  models.py  repository.py  storage_service.py
src/detection/: __init__.py  preprocessing.py  vehicle_detector.py  zone_analyzer.py
src/integrations/: __init__.py  yhu_client.py
src/middleware/: __init__.py  auth.py  compression.py
src/models/: __init__.py  edge.py  enums.py  model_factory.py  shared.py
src/services/: aws_upload_service.py  camera_controller.py  data_accessor.py  detection_queue.py  edge_adapters.py  parking_monitor.py  preset_loader.py  settings_applicator.py
src/storage/: __init__.py  edge_storage.py
src/tracking/: __init__.py  zone_change_tracker.py
src/utils/: cache.py  cache_metrics.py  paths.py  schema_generator.py
templates/: dashboard-backup.html  dashboard.html
tests/: __init__.py  quality_demo.py  simple_tests.py  test_data_accessor.py  test_model_factory.py  test_models.py  test_preset_loader.py  test_quality_parameter.py  test_settings_applicator.py
