[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oaparkingmonitor"
version = "0.1.0"
description = "YOLOv11-based parking detection system optimized for Mac Mini M1"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "OrangeAd dev - Tam Nhu (Kai) Tran", email = "tam@orangead.ca"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dependencies = [
    # Core FastAPI stack
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "jinja2>=3.1.0",
    
    # AI/ML Core - PyTorch with MPS support
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "ultralytics>=8.2.0",
    
    # Computer Vision
    "opencv-python>=4.8.0",
    "numpy>=1.24.0,<2.0.0",  # Pin numpy for compatibility
    "pillow>=10.0.0",
    
    # Apple Silicon Optimization
    "coremltools>=7.0",
    
    # System Monitoring
    "psutil>=5.9.0",
    
    # Configuration and Logging
    "pyyaml>=6.0.0",
    "structlog>=23.0.0",
    
    # Testing dependencies moved to dev section
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.12.0",
    
    # Code Quality
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.0.0",
    
    # Development Tools
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    
    # Performance Profiling
    "py-spy>=0.3.14",
    "memory-profiler>=0.61.0",
]

# Production optimization dependencies
production = [
    "gunicorn>=21.0.0",  # Alternative ASGI server
    "prometheus-client>=0.19.0",  # Metrics export
]

# Apple Silicon specific optimizations
apple-silicon = [
    "accelerate>=0.24.0",  # Hugging Face acceleration
    "torchaudio>=2.1.0",  # Audio processing (if needed)
]

[project.scripts]
parking-monitor = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"